--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,23 +1,23 @@
-<section id="chat" class="chat-container">
-  <p class="chat-title">
-    <span>Chat comunitario</span>
-    <button class="close-chat-btn" id="close-chat-btn">
-      <i class="fa fa-times fa-2"></i>
-    </button>
-  </p>
-  <ul id="message-list">
-  </ul>
-  <form id="chat-message-form">
-    <div class="send-actions">
-      <input
-        type="text"
-        name="message"
-        id="message"
-        placeholder="Inserte aqui su mensaje"
-      />
-      <button type="submit" class="send-message-btn">
-        <i class="fa fa-paper-plane"></i>
-      </button>
-    </div>
-  </form>
-</section>
+<h1>Chat</h1>
+<div>
+  <div id="messages"></div>
+  <input
+    class="input is-warning is-medium"
+    type="text"
+    id="username"
+    style="margin-top: 15px"
+    placeholder="Username"
+  />
+  <input
+    class="input is-warning is-medium"
+    type="text"
+    id="message"
+    style="margin-top: 15px"
+    placeholder="Message"
+  />
+  <button id="send" class="button is-danger is-light" style="margin-top: 15px">
+    Send
+  </button>
+</div>
+<script src="/socket.io/socket.io.js"></script>
+<script src="/js/chat.js"></script>
