--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,21 +1,21 @@
-<h1>Chat</h1>
-<div>
+<div class="container is-max-desktop mt-6 " style="max-width: 500px">
+  <h1 class="title">Chat</h1>
   <div id="messages"></div>
   <input
-    class="input is-warning is-medium"
+    class="input is-info is-medium"
     type="text"
     id="username"
     style="margin-top: 15px"
     placeholder="Username"
   />
   <input
-    class="input is-warning is-medium"
+    class="input is-info is-medium"
     type="text"
     id="message"
     style="margin-top: 15px"
     placeholder="Message"
   />
-  <button id="send" class="button is-danger is-light" style="margin-top: 15px">
+  <button id="send" class="button is-info is-light" style="margin-top: 15px">
     Send
   </button>
 </div>
